# polkadot-sdk-template-pallet-contracts

./: .gitignore  Cargo.toml  zombienet.sh  zombienet.toml
contracts_examples/error_example/: Cargo.toml  lib.rs
contracts_examples/flipper_event/: Cargo.toml  lib.rs
node/: Cargo.toml
node/src/: command.rs  service.rs
runtime/: Cargo.toml  build.rs
runtime/src/: apis.rs  benchmarks.rs  lib.rs
runtime/src/configs/: mod.rs  xcm_config.rs
